fix(options): better overflow on short screens

--- a/src/components/Options/style.module.css
+++ b/src/components/Options/style.module.css
@@ -13,8 +13,7 @@
 .content-container {
 	position: relative;
 	height: calc(100vh - 7rem);
-	overflow-y: auto;
-	overflow-x: hidden;
+	overflow: hidden;
 }
 
 .content {
@@ -32,14 +31,13 @@
 
 .panel {
 	position: absolute;
-	display: flex;
+	display: grid;
 	width: 100%;
-	height: 100%;
-	justify-content: center;
-	align-content: center;
-	flex-direction: column;
+	height: inherit;
 	align-items: center;
+	justify-content: center;
 	color: var(--color-options-panel-text);
+	overflow-y: auto;
 }
 
 .is-visible .content {
